First Commit: UI from Main Activity Done; CustomView + animation Done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="loadAppInfo_textView">LoadApp - Current repository by Udacity</string>
     <string name="retrofitInfo_textView">Retrofit - Type-safe HTTP client for Android and
         Java by Square, Inc</string>
+    <string name="clear">Clear</string>
 </resources>
