--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <!-- The class name to the ScrollingChildBehavior required for AppBarLayout
     <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>-->
 
-    <string name="app_name">ND940C3-Project</string>
+    <string name="app_name">LoadApp</string>
     <string name="app_description">Download files from Internet</string>
     <string name="action_settings">Settings</string>
 
@@ -11,13 +11,17 @@
     <string name="notification_description">The Project 3 repository is downloaded</string>
     <string name="notification_button">See changes</string>
 
-    <string name="button_name">Click me</string>
+    <!-- Loading Button text's to unanimated and animated state's-->
     <string name="button_initial_text">Download</string>
     <string name="button_loading">We are loading </string>
+
+
     <string name="title_activity_detail">DetailActivity</string>
-    <string name="glideInfo_textView">Glide - Image Loading Library by BumpTech</string>
-    <string name="loadAppInfo_textView">LoadApp - Current repository by Udacity</string>
-    <string name="retrofitInfo_textView">Retrofit - Type-safe HTTP client for Android and
+
+    <!-- Radio Button Text's-->
+    <string name="glideInfoText_radioButton">Glide - Image Loading Library by BumpTech</string>
+    <string name="loadAppInfoText_radioButton">LoadApp - Current repository by Udacity</string>
+    <string name="retrofitInfoText_radioButton">Retrofit - Type-safe HTTP client for Android and
         Java by Square, Inc</string>
     <string name="clear">Clear</string>
 </resources>
